--- a/formulier.css
+++ b/formulier.css
@@ -219,7 +219,7 @@ form {
   max-width: 480px;
   margin: 0 auto;
   font-family: sans-serif;
-  background-color: #ffffff00;
+  background-color: #F5BA6F;
   padding: 10px;
   border-radius: 10px;
 }
