--- a/memorygame.css
+++ b/memorygame.css
@@ -65,7 +65,6 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   will-change: transform;
   perspective: 1000px;
-  overflow: hidden;
 }
 
 @media (min-width: 768px) {
@@ -101,14 +100,12 @@ body {
 .card .back {
   background-color: #001f3f;
   transform: rotateY(180deg);
-  overflow: hidden; /* afbeelding blijft binnen kaart */
 }
 
 .card img {
   width: 70%;
   height: auto;
-  object-fit: cover;
-  display: block;
+  object-fit: contain;
 }
 
 .overlay {
